fix: cod structure & link visibility

--- a/src/components/CustomGrid/CustomGrid.module.scss
+++ b/src/components/CustomGrid/CustomGrid.module.scss
@@ -36,6 +36,10 @@
       }
     }
 
+    picture ~ div {
+      visibility: hidden;
+    }
+
     &::-webkit-scrollbar {
       background: $background-color;
       width: 6px;
@@ -55,6 +59,10 @@
       background-color: rgba($color: $base-color, $alpha: 0.3);
       border-radius: 15px;
       padding: 10px;
+
+      & picture ~ div {
+        visibility: visible;
+      }
 
       & a {
         &:focus,
